--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -16,46 +16,49 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="JournalCell" rowHeight="100" id="HRw-GL-nai" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="100"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="JournalCell" id="HRw-GL-nai" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="75"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HRw-GL-nai" id="n4B-MF-8kG">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="75"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fq2-LQ-SIY">
-                                            <rect key="frame" x="20" y="11" width="36.5" height="21"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wih-9q-rq9">
+                                            <rect key="frame" x="20" y="11" width="42" height="24"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timestamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HMr-DB-VDt">
-                                            <rect key="frame" x="308" y="11" width="86" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DlJ-fD-HJu">
+                                            <rect key="frame" x="20" y="43" width="374" height="21"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ekw-gR-Hak">
-                                            <rect key="frame" x="20" y="40" width="39.5" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timestamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBJ-6Y-JYD">
+                                            <rect key="frame" x="326.5" y="11" width="67.5" height="24"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="HMr-DB-VDt" firstAttribute="centerY" secondItem="fq2-LQ-SIY" secondAttribute="centerY" id="1Qh-eu-7Hx"/>
-                                        <constraint firstItem="Ekw-gR-Hak" firstAttribute="leading" secondItem="fq2-LQ-SIY" secondAttribute="leading" id="4MT-ME-bKd"/>
-                                        <constraint firstItem="fq2-LQ-SIY" firstAttribute="top" secondItem="n4B-MF-8kG" secondAttribute="topMargin" id="8Su-Gr-G2J"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="HMr-DB-VDt" secondAttribute="trailing" id="DTD-VF-gwM"/>
-                                        <constraint firstItem="Ekw-gR-Hak" firstAttribute="top" secondItem="fq2-LQ-SIY" secondAttribute="bottom" constant="8" symbolic="YES" id="Yx2-Oa-SBw"/>
-                                        <constraint firstItem="HMr-DB-VDt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="fq2-LQ-SIY" secondAttribute="trailing" constant="10" id="Z6p-IN-ogL"/>
-                                        <constraint firstItem="fq2-LQ-SIY" firstAttribute="leading" secondItem="n4B-MF-8kG" secondAttribute="leadingMargin" id="ZvP-iJ-vvl"/>
+                                        <constraint firstItem="DlJ-fD-HJu" firstAttribute="trailing" secondItem="tBJ-6Y-JYD" secondAttribute="trailing" id="HZg-1C-Pzh"/>
+                                        <constraint firstItem="DlJ-fD-HJu" firstAttribute="leading" secondItem="wih-9q-rq9" secondAttribute="leading" id="MCw-t5-dpV"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="DlJ-fD-HJu" secondAttribute="bottom" id="OpD-OW-TQ5"/>
+                                        <constraint firstItem="tBJ-6Y-JYD" firstAttribute="centerY" secondItem="wih-9q-rq9" secondAttribute="centerY" id="ROQ-gB-abh"/>
+                                        <constraint firstItem="tBJ-6Y-JYD" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="wih-9q-rq9" secondAttribute="trailing" constant="8" symbolic="YES" id="Tnc-jq-ro9"/>
+                                        <constraint firstItem="DlJ-fD-HJu" firstAttribute="top" secondItem="wih-9q-rq9" secondAttribute="bottom" constant="8" symbolic="YES" id="YxW-6X-gpQ"/>
+                                        <constraint firstItem="wih-9q-rq9" firstAttribute="top" secondItem="n4B-MF-8kG" secondAttribute="topMargin" id="cRf-16-xw0"/>
+                                        <constraint firstItem="tBJ-6Y-JYD" firstAttribute="top" secondItem="n4B-MF-8kG" secondAttribute="topMargin" id="hOm-Im-3PC"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="tBJ-6Y-JYD" secondAttribute="trailing" id="pUk-vR-3Lx"/>
+                                        <constraint firstItem="wih-9q-rq9" firstAttribute="leading" secondItem="n4B-MF-8kG" secondAttribute="leadingMargin" id="vCR-Yp-zHJ"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="bodyLabel" destination="Ekw-gR-Hak" id="7ys-Ml-Wof"/>
-                                    <outlet property="timestampLabel" destination="HMr-DB-VDt" id="KJT-oS-bMn"/>
-                                    <outlet property="titleLabel" destination="fq2-LQ-SIY" id="C1d-Hw-KeN"/>
+                                    <outlet property="bodyLabel" destination="DlJ-fD-HJu" id="Nzd-t8-sxu"/>
+                                    <outlet property="timestampLabel" destination="tBJ-6Y-JYD" id="smh-dZ-06k"/>
+                                    <outlet property="titleLabel" destination="wih-9q-rq9" id="a9T-TC-7Ek"/>
                                     <segue destination="AYQ-SK-XcZ" kind="show" identifier="ShowDetailJournalSegue" id="hpC-N0-4qS"/>
                                 </connections>
                             </tableViewCell>
