--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -88,13 +88,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dNC-AO-79d">
+                                <rect key="frame" x="0.0" y="140" width="414" height="722"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            </view>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3zB-UG-weX">
                                 <rect key="frame" x="20" y="160" width="374" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="TcX-QL-usd">
-                                <rect key="frame" x="20" y="202" width="374" height="660"/>
+                                <rect key="frame" x="20" y="202" width="374" height="650"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -105,11 +109,15 @@
                         <constraints>
                             <constraint firstItem="TcX-QL-usd" firstAttribute="top" secondItem="3zB-UG-weX" secondAttribute="bottom" constant="8" symbolic="YES" id="0CT-rY-MXn"/>
                             <constraint firstItem="TZw-Ed-qlY" firstAttribute="trailing" secondItem="3zB-UG-weX" secondAttribute="trailing" constant="20" id="157-nc-deQ"/>
-                            <constraint firstItem="TZw-Ed-qlY" firstAttribute="bottom" secondItem="TcX-QL-usd" secondAttribute="bottom" id="9NC-3q-o3g"/>
+                            <constraint firstItem="dNC-AO-79d" firstAttribute="leading" secondItem="TZw-Ed-qlY" secondAttribute="leading" id="6qp-mC-Rqo"/>
+                            <constraint firstItem="TZw-Ed-qlY" firstAttribute="bottom" secondItem="TcX-QL-usd" secondAttribute="bottom" constant="10" id="9NC-3q-o3g"/>
                             <constraint firstItem="3zB-UG-weX" firstAttribute="top" secondItem="TZw-Ed-qlY" secondAttribute="top" constant="20" id="Ec8-K2-vOD"/>
+                            <constraint firstItem="TZw-Ed-qlY" firstAttribute="trailing" secondItem="dNC-AO-79d" secondAttribute="trailing" id="HPI-tv-HbZ"/>
                             <constraint firstItem="TcX-QL-usd" firstAttribute="leading" secondItem="3zB-UG-weX" secondAttribute="leading" id="N7M-zS-9pT"/>
                             <constraint firstItem="TcX-QL-usd" firstAttribute="trailing" secondItem="3zB-UG-weX" secondAttribute="trailing" id="YCZ-82-aoa"/>
+                            <constraint firstItem="TZw-Ed-qlY" firstAttribute="bottom" secondItem="dNC-AO-79d" secondAttribute="bottom" id="mco-c7-VZl"/>
                             <constraint firstItem="3zB-UG-weX" firstAttribute="leading" secondItem="TZw-Ed-qlY" secondAttribute="leading" constant="20" id="vgY-Fm-dyn"/>
+                            <constraint firstItem="dNC-AO-79d" firstAttribute="top" secondItem="TZw-Ed-qlY" secondAttribute="top" id="x8T-IX-90R"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="TZw-Ed-qlY"/>
                     </view>
